[package]
name = "monolith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
itertools = "0.11.0"
plonky2 = {version = "0.1.4", default-features = true}
serde = "1.0.188"
unroll = "0.1.5"

[features]
default = ["default-sponge-params"]
default-sponge-params = []

[dev-dependencies]
log = "0.4.20"
serde_cbor = "0.11.2"
rstest = "0.18.2"
serial_test = "2.0.0"
env_logger = "0.10.0"

